--- a/static/cover.css
+++ b/static/cover.css
@@ -12,21 +12,21 @@
 
 
 /*
- * Base structure
+ * Index.html
  */
 
-body {
+.homeImage {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
   background-image: url('money.jpg');
 }
 
 
-.midShadow:hover,
+/* .midShadow:hover,
 .midShadow:focus-within{
   box-shadow: 0px 0px 30px rgba(0,0,0, 0.6);
   cursor: pointer;
-}
+} */
 
 .cover-container {
   /* max-width: 42em; */
@@ -48,7 +48,7 @@ body {
   padding: .25rem 0;
   font-weight: 700;
   /* color: rgba(255, 255, 255, .5); */
-  color: white;
+  color: black;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
@@ -63,6 +63,35 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
+  color: black;
   border-bottom-color: #fff;
+}
+
+.bg-img{
+  /* background-image: url('transfer.jpg'); */
+  background-color: orange;
+  padding-bottom: 1000px;
+  mix-blend-mode: darken;
+}
+
+
+/* Transfer Table */
+
+.tableSize{
+  margin-left: 130px;
+  margin-top: 300px;
+  width: 80%;
+}
+
+/*  */
+/* user.html */  
+/*  */
+
+.head{
+  margin-top: 100px;
+  margin-bottom: 120px;
+}
+
+.debit-select{
+  margin-bottom: 20px;
 }
