--- a/templates/index.html
+++ b/templates/index.html
@@ -24,29 +24,11 @@
 <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
 <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#7952b3">
-
-
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
-
     
     <!-- Custom styles for this template -->
     <link href="{{url_for('static', filename='cover.css')}}" rel="stylesheet">
   </head>
-  <body class="d-flex w-100 h-100 text-center text-white">
+  <body class="d-flex w-100 h-100 text-center text-white homeImage">
     
 <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto midShadow">
@@ -54,7 +36,7 @@
       <h3 class="float-md-start mb-0 headPosi">Apna Bank</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end navPosition">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Transfer Money</a>
+        <a class="nav-link" href="/transfer">Transfer Money</a>
         <a class="nav-link" href="#">View Customers</a>
       </nav>
     </div>
