--- a/templates/transfer.html
+++ b/templates/transfer.html
@@ -1,42 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block body %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transfer Money</title>
-</head>
-
-<body>
-    <table>
-        <style>
-            table,
-            th,
-            td {
-                border: 1px solid black;
-            }
-        </style>
-        <tr>
-            <th>Sno</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Current Balance</th>
-        </tr>
-
-        {% for customer in data %}
-        <tr>
-            <td>{{customer.sno}}</td>
-            <td>{{customer.first_name}}</td>
-            <td>{{customer.last_name}}</td>
-            <td>{{customer.email}}</td>
-            <td>{{customer.current_balance}}</td>
-        </tr>
-        {% endfor %}
-
+    <table class="table tableSize">
+        <thead class="table-dark">
+            <tr>
+                <th scope="col">Sno</th>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Email</th>
+                <th scope="col">Current Balance</th>
+                <th scope="col">Transaction</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for customer in data %}
+            <tr>
+                <th scope="row">{{customer.sno}}</th>
+                <td>{{customer.first_name}}</td>
+                <td>{{customer.last_name}}</td>
+                <td>{{customer.email}}</td>
+                <td>{{customer.current_balance}}</td>
+                <td style="cursor: pointer;"><a href="/user">Transfer</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
-
-</body>
-
-</html>
+{% endblock %}
