--- a/templates/home.html
+++ b/templates/home.html
@@ -21,26 +21,24 @@
     <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto midShadow">
             <div>
-                <h3 class="float-md-start mb-0 headPosi">Apna Bank</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-end navPosition">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="/transfer">Transfer Money</a>
-                    <a class="nav-link" href="#">View Customers</a>
-                </nav>
+              <h3 class="float-md-start mb-0 headPosi">Apna Bank</h3>
+              <nav class="nav nav-masthead justify-content-center float-md-end navPosition">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link" href="/transfer">Customers</a>
+                <a class="nav-link" href="/history">Transaction History</a>
+              </nav>
             </div>
-        </header>
+          </header>>
 
         <main class="px-3">
             <h1>Welcome to Apna Bank</h1>
             <p class="lead">We provide all types of money transfer here.</p>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+                <a href="/transfer" class="btn btn-lg btn-secondary fw-bold border-white bg-white">View Customers</a>
             </p>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a
-                    href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
         </footer>
     </div>
 
