--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,16 +15,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <!-- table -->
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/fonts/font-awesome-4.7.0/css/font-awesome.min.css')}}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/vendor/animate/animate.css')}}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/vendor/select2/select2.min.css')}}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/vendor/perfect-scrollbar/perfect-scrollbar.css')}}">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/css/util.css')}}">
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/css/main.css')}}">
+  <link rel="stylesheet" type="text/css"
+    href="{{url_for('static', filename='table/fonts/font-awesome-4.7.0/css/font-awesome.min.css')}}">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/vendor/animate/animate.css')}}">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/vendor/select2/select2.min.css')}}">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css"
+    href="{{url_for('static', filename='table/vendor/perfect-scrollbar/perfect-scrollbar.css')}}">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/css/util.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='table/css/main.css')}}">
   <!-- Favicons -->
   <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -38,22 +40,33 @@
   <link href="{{url_for('static', filename='cover.css')}}" rel="stylesheet">
 </head>
 
-<body class="d-flex w-100 h-100 text-center text-black bg-img">
+<body class="w-100 h-100 text-center text-black bg-img" style="margin-top: 0%;">
 
-  <div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
-    <header class="mb-auto midShadow">
-      <div>
+  <header class="mb-auto midShadow">
+    <!-- <div>
         <h3 class="float-md-start mb-0 headPosi">Apna Bank</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end navPosition">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/transfer">Transfer Money</a>
-          <a class="nav-link" href="#">View Customers</a>
+          <a class="nav-link" href="/transfer">Customers</a>
+          <a class="nav-link" href="/history">Transaction History</a>
         </nav>
-      </div>
-    </header>
+      </div> -->
+    <nav class="navbar background">
+      <ul class="nav-list nav-top">
+        <li><a href="/">Apna Bank</a></li>
+      </ul>
+      <ul class="nav-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/transfer">Customers</a></li>
+        <li><a href="/history">Transaction History</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    {% block body %} {% endblock %}
-
+  {% block body %} {% endblock %}
+  <footer class="background">
+    <p class="text-footer">Copyright &copy; 2021 Apna Bank - All rights reserved</p>
+</footer>
 
 </body>
 
