--- a/templates/user.html
+++ b/templates/user.html
@@ -27,17 +27,17 @@
             <div class="row align-items-stretch no-gutters contact-wrap">
                 <div class="col-md-12">
                     <div class="form h-100">
-                        <h3>Money Transfer</h3>
+                        <h3>Apna Bank - Fund Transfer Gateway</h3>
                         <form class="form mb-5" method="post" action="\user" id="contactForm" name="contactForm">
                             <div class="row">
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="" class="col-form-label">Name *</label>
-                                    <input type="text" class="form-control" name="name" id="name"
+                                    <input type="text" class="form-control" required name="name" id="name"
                                         placeholder="Receiver name">
                                 </div>
                                 <div class="col-md-6 form-group mb-3">
                                     <label for="" class="col-form-label">Email *</label>
-                                    <input type="text" class="form-control" name="receiver" id="email"
+                                    <input type="text" class="form-control" required name="receiver" id="email"
                                         placeholder="Receiver email">
                                 </div>
                             </div>
@@ -47,7 +47,6 @@
                                     <input type="text" class="form-control" required name="amount" id="name" placeholder="Amount">
                                 </div>
                             </div>
-
                             <div class="row">
                                 <div class="col-md-12 form-group mb-3">
                                     <label for="message" class="col-form-label">Remarks</label>
@@ -59,8 +58,20 @@
                                 <div class="col-md-12 form-group">
                                     <input type="submit" value="Pay" class="btn btn-primary rounded-0 py-2 px-4">
                                     <span class="submitting"></span>
+                                    <!-- <input type="submit" value="Cancel" class="btn btn-primary rounded-0 py-2 px-4">
+                                    <span class="submitting"></span> -->
                                 </div>
                             </div>
+                        </form>
+                        <form action="\transfer">
+                            <!-- <div class="row"> -->
+                                <!-- <div class="col-md-12 form-group"> -->
+                                    <!-- <input type="submit" value="Pay" class="btn btn-primary rounded-0 py-2 px-4">
+                                    <span class="submitting"></span> -->
+                                    <input type="submit" value="Cancel" class="btn btn-primary rounded-0 py-2 px-4">
+                                    <span class="submitting"></span>
+                                <!-- </div> -->
+                            <!-- </div> -->
                         </form>
 
                         <div id="form-message-warning mt-4"></div>
@@ -77,11 +88,11 @@
 
 
 
-    <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/popper.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/jquery.validate.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/main.js')}}"></script>
+    <script src="{{url_for('static', filename='table/js/jquery-3.3.1.min.js')}}"></script>
+    <script src="{{url_for('static', filename='table/js/popper.min.js')}}"></script>
+    <script src="{{url_for('static', filename='table/js/bootstrap.min.js')}}"></script>
+    <script src="{{url_for('static', filename='table/js/jquery.validate.min.js')}}"></script>
+    <script src="{{url_for('static', filename='table/js/main.js')}}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 
